syntax = "proto3";
// protoc -I ./ ./maxcpu.proto --go_out=plugins=grpc:$GOPATH/src 

import "google/protobuf/empty.proto";

package maxcpu;
option go_package = "github.com/kazeburo/mackerel-plugin-maxcpu/maxcpu";

service MaxCPU {
  rpc GetStats(google.protobuf.Empty) returns (StatsResponse) {}
  rpc Hello(google.protobuf.Empty) returns (HelloResponse) {}

}

message HelloResponse {
  string Message = 1;
}

message StatsResponse {
    repeated Metric Metrics = 1;
}

message Metric {
    string Key = 1;
    double Metric = 2;
    int64 Epoch = 3;
}

